--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Vertedge</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-    <script src="script.js"></script>
+    <link href="apper/apper.css" rel="stylesheet" type="text/css"/>
+    <script src="apper/apper.js"></script>
+    <script src="vertedge.js"></script>
     <link rel="icon" href="icons/favicon.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Cousine&family=Nunito:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="vertedge-viewer"></div>
+    <div class="vertedge-application"></div>
   </body>
 </html>
