--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
     <title>Vertedge</title>
-    <link href="apper/apper.css" rel="stylesheet" type="text/css"/>
-    <script src="apper/apper.js"></script>
+    <link href="https://combinatronics.com/xarkenz/apper/main/src/apper.css" rel="stylesheet" type="text/css"/>
+    <script src="https://combinatronics.com/xarkenz/apper/main/src/apper.js" type="text/javascript"></script>
     <script src="vertedge.js"></script>
     <link rel="icon" href="icons/favicon.ico"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
