--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cousine&family=Nunito:wght@500&display=swap" rel="stylesheet">
-    <link href="../apper/src/apper.css" rel="stylesheet" type="text/css"/> <!--https://combinatronics.com/xarkenz/apper/main/src/apper-->
-    <script src="../apper/src/apper.js" type="text/javascript"></script>
+    <link href="https://combinatronics.com/xarkenz/apper/main/src/apper.css" rel="stylesheet" type="text/css"/>
+    <script src="https://combinatronics.com/xarkenz/apper/main/src/apper.js" type="text/javascript"></script>
     <script src="vertedge.js"></script>
   </head>
   <body>
