Apper script now loads from xarkenz.github.io
RIP combinatronics.com... you will be missed. However, this is arguably better.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Vertedge</title>
     <link rel="icon" href="icons/favicon.ico"/>
-    <script src="https://combinatronics.com/xarkenz/apper/main/src/apper.js" type="text/javascript"></script>
+    <script src="https://xarkenz.github.io/apper/src/apper.js" type="text/javascript"></script>
     <script src="vertedge.js"></script>
   </head>
   <body>
