--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <title>Vertedge</title>
     <link rel="icon" href="icons/favicon.ico"/>
     <script src="https://xarkenz.github.io/apper/src/apper.js" type="text/javascript"></script>
