reorganized project, included apper framework for now

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width">
-    <title>Vertedge</title>
-    <link rel="icon" href="icons/favicon.ico"/>
-    <script src="https://xarkenz.github.io/apper/src/apper.js" type="text/javascript"></script>
-    <script src="vertedge.js"></script>
-  </head>
-  <body>
-  </body>
+    <head>
+        <meta name="viewport" content="width=device-width">
+        <title>Vertedge</title>
+        <link rel="icon" href="assets/vertedge/icons/favicon.ico"/>
+        <script src="src/apper/apper.js" type="text/javascript"></script>
+        <script src="src/vertedge/vertedge.js"></script>
+        <script src="main.js" defer></script>
+    </head>
+    <body>
+        <div id="vertedge-application-container" style="position: fixed; left: 0; top: 0; width: 100vw; height: 100vh;"></div>
+    </body>
 </html>
