--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width">
         <title>Vertedge</title>
-        <link rel="icon" href="assets/vertedge/icons/favicon.ico"/>
+        <link rel="icon" href="assets/vertedge/icons/favicon.ico">
+        <link rel="stylesheet" type="text/css" href="src/vertedge/vertedge.css">
         <script src="src/apper/apper.js" type="text/javascript"></script>
         <script src="src/vertedge/vertedge.js"></script>
         <script src="main.js" defer></script>
